crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__on_instance.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/on_instance.lox
---
success: true
exit_code: 0
----- stdout -----
bar value
baz value
bar value
baz value

----- stderr -----
