crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__set_on_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/set_on_function.lox
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----
thread 'main' panicked at crabbing-interpreters/src/eval.rs:433:30:
explicit panic
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
