crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__set_on_nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/set_on_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have fields, but `nil` is of type `Nil`
   ╭─[craftinginterpreters/test/field/set_on_nil.lox:1:1]
   │
 1 │ nil.foo = "value"; // expect runtime error: Only instances have fields.
   │ ─── ───  
───╯
