crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__set_on_num.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/set_on_num.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have fields, but `123` is of type `Number`
   ╭─[craftinginterpreters/test/field/set_on_num.lox:1:1]
   │
 1 │ 123.foo = "value"; // expect runtime error: Only instances have fields.
   │ ─── ───  
───╯
