crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__field__undefined.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/undefined.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: undefined property `bar` of value `<Foo instance at [POINTER]>`
   ╭─[craftinginterpreters/test/field/undefined.lox:4:1]
   │
 4 │ foo.bar; // expect runtime error: Undefined property 'bar'.
   │ ─── ───  
───╯
